# taskforge

taskforge/: Cargo.toml  README.md
taskforge/config/: tasks.toml
taskforge/src/: main.rs
taskforge/src/cli/: mod.rs
taskforge/src/executor/: mod.rs
taskforge/src/history/: mod.rs
taskforge/src/registry/: mod.rs  task_ext.rs
taskforge/src/scheduler/: mod.rs
